# caption-the-internet

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
data/: utils.py
notebooks/: visualize_benchmark_results.ipynb
scripts/: batch_inference.py  benchmark.sh  benchmark_captioners.py  benchmark_config.json  benchmark_config_coca.json  benchmark_config_cogvlm.json  benchmark_config_florence.json  benchmark_config_llava.json  merge_tars.py
scripts/slurm/: ray_cluster_gpu.sbatch
src/: batch_inference.py  cli.py  clip_score_utils.py  data.py  extra_args.py  open_clip_models.py  prompts.py  viz.py  writer.py
src/data_routines/: data.py  dist_data_processing.py  writer.py
src/data_routines/configs/: add_captions.yaml  filter_mono.yaml
src/data_routines/filters/: __init__.py  base.py  filter_mono.py
src/data_routines/mappers/: __init__.py  add_fields_mapper.py
src/visualization/: __init__.py
tests/: test_config.py  test_dist_data.py  test_filters.py  test_merge_tars.py
tests/test_data/: test.yaml
