[project]
name = "caption-the-internet"
version = "2025.0.0"


dependencies = [
  "vllm",
  "webdataset",
  "ray",
  "opencv-python",
  "transformers",
  "open_clip_torch",
  "pyyaml",
  "fire",
  "matplotlib"
]

readme = "README.md"

[project.optional-dependencies]
test = [
    "pytest"
]
format = [
  "ruff"
]